# gold-silver-copper.github.io

./: .gitignore  CNAME  Cargo.toml  IDEAS.md  README.md  barchart.js  barchart_bg.wasm  block.js  block_bg.wasm  build.sh  calendar.js  calendar_bg.wasm  canvas.js  chart.js  colors-3b43a50e883ad317.js  colors.js  colors_bg.wasm  colors_rgb.js  colors_rgb_bg.wasm  constraint_explorer.js  constraint_explorer_bg.wasm  constraints.js  constraints_bg.wasm  demo.js  demo2.js  demo2_bg.wasm  flex.js  gauge.js  gauge_bg.wasm  grift-site-222d6e6bcc2553e2.js  grift-site-222d6e6bcc2553e2_bg.wasm  grift-site-4387008adb8ce35a.js  grift-site-4387008adb8ce35a_bg.wasm  grift-site-4ef3a6e6f4bff2b1.js  grift-site-4ef3a6e6f4bff2b1_bg.wasm  grift-site-5564abd34548b2bd.js  grift-site-5564abd34548b2bd_bg.wasm  grift-site-65d5060626d89864.js  grift-site-65d5060626d89864_bg.wasm  grift-site-855600dd306b0366.js  (+51 more)
TerminalVirtualKeyboard/: Cargo.toml
TerminalVirtualKeyboard/src/: env.rs  error.rs  layout.rs  lexer.rs  lib.rs  parser.rs  render.rs  virtual_key.rs
code/: Cargo.toml  index.html  manifest.json  sw.js
code/assets/: style.css
code/blog/: 01-welcome.md  02-building-grift.md  03-vau-calculus.md  04-terminal-uis-browser.md  05-unified-layout.md  06-wasm-performance.md  07-tachyonfx.md  08-arena-allocation.md
code/docs/: 01-basics.md  02-forms.md  03-advanced.md  04-environments.md  05-errors.md
code/src/: main.rs
fonts/: firacode.css  jetbrainsmono.css
md-tui/: Cargo.toml
md-tui/src/: lib.rs  main.rs  parser.rs  util.rs
md-tui/src/highlight/: mod.rs
md-tui/src/nodes/: image.rs  root.rs  textcomponent.rs
md-tui/src/util/: colors.rs  general.rs
src/: bevy.rs
tests/: viewport-sizing.spec.js
