[package]
name = "grift-site"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ratzilla = { git = "https://github.com/ratatui/ratzilla" }
grift = { git = "https://github.com/skyfskyf/grift", default-features = false }
console_error_panic_hook = "0.1.7"
tachyonfx = { version = "0.25.0", features = ["wasm"] }
web-time = "1.1"
web-sys = "0.3"
