[package]
name = "md-tui"
version = "0.9.4"
edition = "2024"
authors = ["Henrik Tøn Løvhaug"]
description = "A terminal markdown viewer"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/henriklovhaug/md-tui"
homepage = "https://github.com/henriklovhaug/md-tui"
keywords = ["markdown", "terminal", "viewer", "tui"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "mdt"
path = "src/main.rs"
required-features = ["terminal"]

[features]
default = ["terminal", "tree-sitter", "network"]
terminal = [
  "crossterm",
  "ratatui-image",
  "image",
  "better-panic",
  "config",
  "dirs",
  "notify",
  "open",
  "strsim",
  "syntax-highlight",
]
syntax-highlight = [
  "tree-sitter-highlight",
  "tree-sitter",
]
tree-sitter = [
  "tree-sitter-bash",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "tree-sitter-css",
  "tree-sitter-diff",
  "tree-sitter-elixir",
  "tree-sitter-go",
  "tree-sitter-html",
  "tree-sitter-java",
  "tree-sitter-javascript",
  "tree-sitter-json",
  "tree-sitter-lua",
  "tree-sitter-luau-fork",
  "tree-sitter-ocaml",
  "tree-sitter-php",
  "tree-sitter-python",
  "tree-sitter-rust",
  "tree-sitter-scala",
  "tree-sitter-typescript",
  "tree-sitter-yaml",
]
network = ["ureq"]

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["macros", "all-widgets", "serde"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"], optional = true }
ratatui-image = { version = "10.0.5", default-features = false, features = ["image-defaults", "crossterm"], optional = true }
better-panic = { version = "0.3.0", optional = true }
config = { version = "0.15.19", optional = true }
dirs = { version = "6.0.0", optional = true }
image = { version = "0.25.9", default-features = false, optional = true }
itertools = "0.14.0"
notify = { version = "8.2.0", optional = true }
open = { version = "5.3.3", optional = true }
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { version = "1.0.228", features = ["derive"] }
strsim = { version = "0.11.1", optional = true }
unicode-width = "0.2.2"
ureq = { version = "3.2.0", optional = true }
tree-sitter-highlight = { version = "0.26.5", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-elixir = { version = "0.3.4", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-lua = { version = "0.4.1", optional = true }
tree-sitter-luau-fork = { version = "0.1.3", optional = true }
tree-sitter-ocaml = { version = "0.24.2", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.24.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }
tree-sitter-diff = { version = "0.1.0", optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
